# dashboard-masalah-pendidikan

./: README.md  app.py  notebook.ipynb  pyproject.toml  requirements.txt
models/: dropout_prediction_xgboost_pipeline.pkl
