[project]
name = "dashboard-masalah-pendidikan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "optuna>=4.3.0",
    "seaborn>=0.13.2",
    "xgboost>=3.0.0",
]
